[gd_scene load_steps=4 format=4]

[ext_resource type="Script" path="res://objects/bonus_level_map_button/click_on_me.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dunl88cyci7ka" path="res://stages/extra/click_bonus_game/textures/click_on_me.png" id="2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_82o3c"]
size = Vector2(104, 103)

[node name="BonusLevelClickOnMe" type="Node2D"]
script = ExtResource("1")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(2, -3.5)
shape = SubResource("RectangleShape2D_82o3c")

[node name="ClickOnMe" type="Sprite2D" parent="."]
texture = ExtResource("2")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_exited"]
